@@ -1,3 +1,8 @@
+2011-10-22  Nicolas François  <nicolas.francois@centraliens.net>
+
+	* man/su.1.xml: Document that su -c does not providea controlling
+	terminal.
+
 2011-10-18  Nicolas François  <nicolas.francois@centraliens.net>
 
 	* src/newusers.c: Fix typo.
